# s4d

./: CMakeLists.txt
src/: app.h  gui.h
src/lib/: camera.h
src/platform/: gl.h  platform.h
src/scene/: render.cpp  scene.h
